--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,8 @@
          version="5.0"
          metadata-complete="true">
 
+            <welcome-file-list>
+<welcome-file>views/login.jsp</welcome-file>
+</welcome-file-list>
+
 </web-app>
