--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,7 @@
     <servlet-mapping>
         <servlet-name>indexServlet</servlet-name>
         <url-pattern>/home</url-pattern>
+        <url-pattern></url-pattern>
     </servlet-mapping>
 
   <!-- <servlet>
