--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,6 +45,61 @@
         <url-pattern>/checkout</url-pattern>
     </servlet-mapping>
 
+
+    <servlet>
+        <servlet-name>RegisterServlet</servlet-name>
+        <servlet-class>com.relaxit.presentation.controllers.RegisterServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RegisterServlet</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>com.relaxit.presentation.controllers.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+ <servlet>
+        <servlet-name>ProfileServlet</servlet-name>
+        <servlet-class>com.relaxit.presentation.controllers.ProfileServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ProfileServlet</servlet-name>
+        <url-pattern>/profile</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>AdminServlet</servlet-name>
+        <servlet-class>com.relaxit.presentation.controllers.AdminServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AdminServlet</servlet-name>
+        <url-pattern>/thankyou</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>GoogleLoginServlet</servlet-name>
+        <servlet-class>com.relaxit.presentation.controllers.GoogleLoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GoogleLoginServlet</servlet-name>
+        <url-pattern>/googleLogin</url-pattern>
+    </servlet-mapping>
+
+
+    <listener>
+        <listener-class>com.relaxit.presentation.listeners.MyContextListener</listener-class>
+    </listener>
+    
+
+    <welcome-file-list>
+        <welcome-file>views/login.jsp</welcome-file>
+    </welcome-file-list>
+
   <!-- <servlet>
         <servlet-name>cartServlet</servlet-name>
         <servlet-class>com.relaxit.presentation.controllers.CartServlet</servlet-class>
