--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -96,9 +96,18 @@
     </listener>
     
 
-    <welcome-file-list>
+    <servlet>
+       <servlet-name>LogoutServlet</servlet-name>
+       <servlet-class>com.relaxit.presentation.controllers.LogoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+       <servlet-name>LogoutServlet</servlet-name>
+       <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+
+    <!-- <welcome-file-list>
         <welcome-file>views/login.jsp</welcome-file>
-    </welcome-file-list>
+    </welcome-file-list> -->
 
   <!-- <servlet>
         <servlet-name>cartServlet</servlet-name>
