--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,11 @@
         <servlet-class>com.relaxit.presentation.controllers.CheckoutServlet</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>thanksServlet</servlet-name>
+        <servlet-class>com.relaxit.presentation.controllers.ThanksServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>shopServlet</servlet-name>
         <url-pattern>/shop</url-pattern>
@@ -45,6 +50,11 @@
         <url-pattern>/checkout</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>thanksServlet</servlet-name>
+        <url-pattern>/thanks</url-pattern>
+    </servlet-mapping>
+
 
     <servlet>
         <servlet-name>RegisterServlet</servlet-name>
@@ -59,14 +69,17 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>com.relaxit.presentation.controllers.LoginServlet</servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
- <servlet>
+
+    <servlet>
         <servlet-name>ProfileServlet</servlet-name>
         <servlet-class>com.relaxit.presentation.controllers.ProfileServlet</servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>ProfileServlet</servlet-name>
         <url-pattern>/profile</url-pattern>
@@ -76,6 +89,7 @@
         <servlet-name>AdminServlet</servlet-name>
         <servlet-class>com.relaxit.presentation.controllers.AdminServlet</servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>AdminServlet</servlet-name>
         <url-pattern>/thankyou</url-pattern>
@@ -85,6 +99,7 @@
         <servlet-name>GoogleLoginServlet</servlet-name>
         <servlet-class>com.relaxit.presentation.controllers.GoogleLoginServlet</servlet-class>
     </servlet>
+
     <servlet-mapping>
         <servlet-name>GoogleLoginServlet</servlet-name>
         <url-pattern>/googleLogin</url-pattern>
@@ -100,6 +115,7 @@
        <servlet-name>LogoutServlet</servlet-name>
        <servlet-class>com.relaxit.presentation.controllers.LogoutServlet</servlet-class>
     </servlet>
+
     <servlet-mapping>
        <servlet-name>LogoutServlet</servlet-name>
        <url-pattern>/logout</url-pattern>
