--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,17 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+        
        
 
         <dependency>
@@ -112,6 +123,7 @@
             <artifactId>google-api-services-people</artifactId>
             <version>v1-rev20240313-2.0.0</version>
         </dependency>
+        
        
         
         
@@ -127,7 +139,7 @@
                 <configuration>
                     <username>admin</username>
                     <password>admin</password>
-                    <url>http://localhost:9090/manager/text</url>
+                    <url>http://localhost:8080/manager/text</url>
                     <path>/relaxit</path>
                 </configuration>
             </plugin>
