--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,11 @@
             <version>v1-rev20240313-2.0.0</version>
         </dependency>
         
-       
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.1</version>
+        </dependency>
         
         
 
